--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "flv.js": "^1.4.2"
+    "flv.js": "^1.4.2",
+    "video.js": "^7.1.0",
+    "videojs-flvjs": "^0.2.0"
   }
 }
